# raytracer

./: .gitignore  CMakeLists.txt  build.sh  config.cfg  raytracer  rta  test.ppm
.github/workflows/: actions.yml  actionsDev.yml
ConfigFile/: config.cfg  config2.cfg  config3.cfg
librairies/common/: CheckerTex.cpp  CheckerTex.hpp  SolidColor.cpp  SolidColor.hpp
librairies/cone/: CMakeLists.txt  Cone.cpp  Cone.hpp
librairies/cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
librairies/dialectric/: CMakeLists.txt  Dialectric.cpp  Dialectric.hpp
librairies/diffuselight/: CMakeLists.txt  Diffuselight.cpp  Diffuselight.hpp
librairies/lambertian/: CMakeLists.txt  Lambertian.cpp  Lambertian.hpp
librairies/metal/: CMakeLists.txt  Metal.cpp  metal.cpp  metal.hpp
librairies/metals/: CMakeLists.txt  Metal.cpp  Metal.hpp
librairies/plan/: CMakeLists.txt  Plan.cpp  Plan.hpp
librairies/sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
librairies/template/: CMakeLists.txt  main.cpp
librairies/triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
src/: main.cpp
src/DlLoader/: CLibEncapsulation.cpp  CLibEncapsulation.hpp
src/builder/: builder.cpp  builder.hpp
src/camera/: Camera.cpp  Camera.hpp  Preview.cpp  Preview.hpp  camera.hpp
src/common/: common_include.hpp
src/list_object/: HitRecord.cpp  HitRecord.hpp  hittable.hpp  hittables.hpp
src/material/: Color.cpp  Color.hpp  ColorMat.cpp  ColorMat.hpp  IMaterial.hpp  ITexture.hpp  Imaterial.hpp  color.cpp  color.hpp  lambertian.cpp  lambertian.hpp  material.hpp
src/maths/: Interval.cpp  Interval.hpp  Ray.cpp  Ray.hpp  Rotate.cpp  Rotate.hpp  Trans.cpp  Trans.hpp  Utils.cpp  Utils.hpp  Vec3.cpp  Vec3.hpp  interval.cpp  interval.hpp  ray.hpp  utils.cpp  utils.hpp  vec3.hpp
src/primitive/: APrimitive.cpp  APrimitive.hpp  IPrimitive.hpp  PrimList.cpp  PrimList.hpp  Sphere.cpp  Sphere.hpp  sphere.hpp
src/settings/: Settings.cpp  Settings.hpp
test/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  ray.hpp  raytracer.hpp  sphere.hpp  test.cpp  test.hpp  vec3.hpp
